# ahrs_board

./: .gdbinit  README.md  meson.build  meson_options.txt
core/src/: system_stm32f3xx.c
include/algos/: madgwick.h  quaternion.h
include/cm4/: systick.h
include/devices/: ahrs_ioconfig.h  bmx055.h
include/drivers/: leds.h  uart.h
include/stm32f3hal/: dma.h  flash.h  gpio.h  i2c.h  rcc.h  usart.h
include/utils/: aproto.h  bin2hex.h  queue.h
scripts/: flash.sh
src/: main.c
src/algos/: madgwick.c  quaternion.c
src/cm4/: systick.c
src/devices/: ahrs_ioconfig.c  bmx055.c
src/drivers/: leds.c  uart.c
src/stm32f3hal/: dma.c  flash.c  gpio.c  i2c.c  rcc.c  usart.c
src/utils/: aproto.c  bin2hex.c  mpack.c  queue.c
stm32_files/: STM32F302CBTX_FLASH.ld  stm32_cross_properties.cfg
template_files/stm32_files/: stm32_cross_properties.cfg
